<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_foco"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_switches"
            android:icon="@drawable/ic_cuartos"
            android:title="@string/menu_switches" />
        <item
            android:id="@+id/nav_changePassword"
            android:icon="@drawable/ic_psw"
            android:title="@string/menu_change_password" />
    </group>
</menu>