<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/bordesitemlista">

    <TextView
        android:id="@+id/txtPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/switch_place_name"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart" />
    <TextView
        android:id="@+id/txtBulbState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_bulb_state"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/btnEditarSwtich"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:background="#f00"
        android:text="@string/button_edit"
        android:textColor="@color/white" />

</LinearLayout>