<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/question_delete_user_confirm"
        android:textAlignment="center"
        android:paddingBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginEnd="60dp">

        <Button
            android:id="@+id/btncancelareliminacion"
            android:layout_width="113dp"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:background="#000"
            android:text="@string/button_cancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btneliminarusuario"
            android:layout_width="113dp"
            android:layout_height="32dp"
            android:layout_marginStart="0dp"
            android:background="#ff00"
            android:text="@string/button_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>