<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00bda4"
    tools:context=".ui.change_password.ChangePasswordFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="99dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="78dp"
        android:contentDescription="@string/empty_contentDescription"
        android:src="@drawable/ic_change_password"
        app:layout_constraintBottom_toTopOf="@+id/edtActualPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtActualPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/input_actual_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNewPasswordConfirm"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/input_new_password_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:drawableStart="@drawable/ic_save"
        android:drawablePadding="7dp"
        android:text="@string/button_new_password_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtActualPassword"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>