<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_general"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logo_blanco"
        android:layout_width="310dp"
        android:layout_height="246dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/blanco"
        android:contentDescription="@string/empty_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246sp"
        android:layout_height="191sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="439dp"
        android:contentDescription="@string/empty_contentDescription"
        android:src="@drawable/foco1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="161sp"
        android:layout_height="30sp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="399dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="302dp"
        android:text="@string/text_login_welcome"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="245sp"
        android:layout_height="41sp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="244dp"
        android:autofillHints="@string/text_login_input_user_hint"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/text_login_input_user_hint"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textColorHint="#212121"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="245sp"
        android:layout_height="45sp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="189dp"
        android:autofillHints="@string/text_login_input_password_hint"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/text_login_input_password_hint"
        android:inputType="textPassword"
        android:textColor="#000"
        android:textColorHint="#212121"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="151dp"
        android:background="@drawable/btn"
        android:text="@string/text_login_button_do_login"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNewuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="125dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_text_new_user"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>